--- a/index.html
+++ b/index.html
@@ -240,7 +240,7 @@
     <main>
       <!-- Deal of the day -->
       <section>
-        <div class="mx-5 md:max-w-4xl lg:max-w-5xl md:mx-auto">
+        <div class="mx-5 mb-16 md:max-w-4xl lg:max-w-5xl md:mx-auto">
           <div
             class="flex flex-col md:flex-row items-center px-4 justify-around"
           >
@@ -477,11 +477,14 @@
           </div>
 
           <!-- button add korte hobe -->
+          <div class="text-center mt-4">
+            <button class="btn btn-primary">Details</button>
+          </div>
         </div>
       </section>
       <!-- team -->
       <section>
-        <div class="mx-5 md:max-w-3xl md:mx-auto">
+        <div class="mx-5 md:max-w-4xl lg:max-w-5xl md:mx-auto mb-16">
           <div
             class="hero min-h-screen rounded-lg"
             style="background-image: url('./images/banner1.png')"
@@ -498,59 +501,213 @@
               class="grid grid-cols-2 justify-self-center self-center text-center text-neutral-content z-30 p-4"
             >
               <div class="max-w-md col-span-full justify-self-center p-4">
-                <h1 class="mb-5 text-5xl font-bold">Hello there</h1>
+                <h1 class="mb-5 text-5xl font-bold">Meet the team section</h1>
                 <p class="mb-5">
-                  Provident cupiditate voluptatem et in. Quaerat fugiat ut
-                  assumenda excepturi exercitationem quasi. In deleniti eaque
-                  aut repudiandae et a id nisi.
+                  Contrary to popular belief, is not simply random text. It has
+                  roots in a piece of classical Latin literature from 45 BC,
+                  making it over 2000 years old.
                 </p>
               </div>
 
               <div
-                class="col-span-full grid grid-cols-1 md:grid-cols-2 lg:grid-cols-4 gap-4"
+                class="col-span-full grid grid-cols-1 md:grid-cols-2 lg:grid-cols-4 gap-4 text-black"
               >
-                <div class="card card-compact bg-base-100 shadow-xl">
-                  <div class="avatar">
+                <div class="card card-compact bg-white shadow-xl text-center">
+                  <div class="avatar justify-center">
                     <div class="w-24 rounded-full">
                       <img src="./images/member1.png" />
                     </div>
                   </div>
                   <div class="card-body">
-                    <h2 class="card-title">Shoes!</h2>
-                    <p>If a dog chews shoes whose shoes does he choose?</p>
+                    <h2 class="card-title">Awlad Hossain</h2>
+                    <p>Fruits Expert</p>
+                  </div>
+                  <div class="flex gap-4 pb-2 justify-center text-red-600">
+                    <a
+                      ><svg
+                        xmlns="http://www.w3.org/2000/svg"
+                        width="24"
+                        height="24"
+                        viewBox="0 0 24 24"
+                        class="fill-current"
+                      >
+                        <path
+                          d="M24 4.557c-.883.392-1.832.656-2.828.775 1.017-.609 1.798-1.574 2.165-2.724-.951.564-2.005.974-3.127 1.195-.897-.957-2.178-1.555-3.594-1.555-3.179 0-5.515 2.966-4.797 6.045-4.091-.205-7.719-2.165-10.148-5.144-1.29 2.213-.669 5.108 1.523 6.574-.806-.026-1.566-.247-2.229-.616-.054 2.281 1.581 4.415 3.949 4.89-.693.188-1.452.232-2.224.084.626 1.956 2.444 3.379 4.6 3.419-2.07 1.623-4.678 2.348-7.29 2.04 2.179 1.397 4.768 2.212 7.548 2.212 9.142 0 14.307-7.721 13.995-14.646.962-.695 1.797-1.562 2.457-2.549z"
+                        ></path></svg
+                    ></a>
+                    <a
+                      ><svg
+                        xmlns="http://www.w3.org/2000/svg"
+                        width="24"
+                        height="24"
+                        viewBox="0 0 24 24"
+                        class="fill-current"
+                      >
+                        <path
+                          d="M19.615 3.184c-3.604-.246-11.631-.245-15.23 0-3.897.266-4.356 2.62-4.385 8.816.029 6.185.484 8.549 4.385 8.816 3.6.245 11.626.246 15.23 0 3.897-.266 4.356-2.62 4.385-8.816-.029-6.185-.484-8.549-4.385-8.816zm-10.615 12.816v-8l8 3.993-8 4.007z"
+                        ></path></svg
+                    ></a>
+                    <a
+                      ><svg
+                        xmlns="http://www.w3.org/2000/svg"
+                        width="24"
+                        height="24"
+                        viewBox="0 0 24 24"
+                        class="fill-current"
+                      >
+                        <path
+                          d="M9 8h-3v4h3v12h5v-12h3.642l.358-4h-4v-1.667c0-.955.192-1.333 1.115-1.333h2.885v-5h-3.808c-3.596 0-5.192 1.583-5.192 4.615v3.385z"
+                        ></path></svg
+                    ></a>
+                  </div>
+                </div>
+                <div class="card card-compact bg-base-100 shadow-xl text-black">
+                  <div class="avatar justify-center">
+                    <div class="w-24 rounded-full">
+                      <img src="./images/member2.png" />
+                    </div>
+                  </div>
+                  <div class="card-body">
+                    <h2 class="card-title">Safia Chowdhury</h2>
+                    <p>Fruits Expert</p>
+                  </div>
+                  <div class="flex gap-4 pb-2 justify-center text-red-600">
+                    <a
+                      ><svg
+                        xmlns="http://www.w3.org/2000/svg"
+                        width="24"
+                        height="24"
+                        viewBox="0 0 24 24"
+                        class="fill-current"
+                      >
+                        <path
+                          d="M24 4.557c-.883.392-1.832.656-2.828.775 1.017-.609 1.798-1.574 2.165-2.724-.951.564-2.005.974-3.127 1.195-.897-.957-2.178-1.555-3.594-1.555-3.179 0-5.515 2.966-4.797 6.045-4.091-.205-7.719-2.165-10.148-5.144-1.29 2.213-.669 5.108 1.523 6.574-.806-.026-1.566-.247-2.229-.616-.054 2.281 1.581 4.415 3.949 4.89-.693.188-1.452.232-2.224.084.626 1.956 2.444 3.379 4.6 3.419-2.07 1.623-4.678 2.348-7.29 2.04 2.179 1.397 4.768 2.212 7.548 2.212 9.142 0 14.307-7.721 13.995-14.646.962-.695 1.797-1.562 2.457-2.549z"
+                        ></path></svg
+                    ></a>
+                    <a
+                      ><svg
+                        xmlns="http://www.w3.org/2000/svg"
+                        width="24"
+                        height="24"
+                        viewBox="0 0 24 24"
+                        class="fill-current"
+                      >
+                        <path
+                          d="M19.615 3.184c-3.604-.246-11.631-.245-15.23 0-3.897.266-4.356 2.62-4.385 8.816.029 6.185.484 8.549 4.385 8.816 3.6.245 11.626.246 15.23 0 3.897-.266 4.356-2.62 4.385-8.816-.029-6.185-.484-8.549-4.385-8.816zm-10.615 12.816v-8l8 3.993-8 4.007z"
+                        ></path></svg
+                    ></a>
+                    <a
+                      ><svg
+                        xmlns="http://www.w3.org/2000/svg"
+                        width="24"
+                        height="24"
+                        viewBox="0 0 24 24"
+                        class="fill-current"
+                      >
+                        <path
+                          d="M9 8h-3v4h3v12h5v-12h3.642l.358-4h-4v-1.667c0-.955.192-1.333 1.115-1.333h2.885v-5h-3.808c-3.596 0-5.192 1.583-5.192 4.615v3.385z"
+                        ></path></svg
+                    ></a>
                   </div>
                 </div>
                 <div class="card card-compact bg-base-100 shadow-xl">
-                  <div class="avatar">
+                  <div class="avatar justify-center">
                     <div class="w-24 rounded-full">
-                      <img src="./images/member1.png" />
+                      <img src="./images/member3.png" />
                     </div>
                   </div>
                   <div class="card-body">
-                    <h2 class="card-title">Shoes!</h2>
-                    <p>If a dog chews shoes whose shoes does he choose?</p>
+                    <h2 class="card-title">Rokib Hossain</h2>
+                    <p>Fruits Expert</p>
+                  </div>
+                  <div class="flex gap-4 pb-2 justify-center text-red-600">
+                    <a
+                      ><svg
+                        xmlns="http://www.w3.org/2000/svg"
+                        width="24"
+                        height="24"
+                        viewBox="0 0 24 24"
+                        class="fill-current"
+                      >
+                        <path
+                          d="M24 4.557c-.883.392-1.832.656-2.828.775 1.017-.609 1.798-1.574 2.165-2.724-.951.564-2.005.974-3.127 1.195-.897-.957-2.178-1.555-3.594-1.555-3.179 0-5.515 2.966-4.797 6.045-4.091-.205-7.719-2.165-10.148-5.144-1.29 2.213-.669 5.108 1.523 6.574-.806-.026-1.566-.247-2.229-.616-.054 2.281 1.581 4.415 3.949 4.89-.693.188-1.452.232-2.224.084.626 1.956 2.444 3.379 4.6 3.419-2.07 1.623-4.678 2.348-7.29 2.04 2.179 1.397 4.768 2.212 7.548 2.212 9.142 0 14.307-7.721 13.995-14.646.962-.695 1.797-1.562 2.457-2.549z"
+                        ></path></svg
+                    ></a>
+                    <a
+                      ><svg
+                        xmlns="http://www.w3.org/2000/svg"
+                        width="24"
+                        height="24"
+                        viewBox="0 0 24 24"
+                        class="fill-current"
+                      >
+                        <path
+                          d="M19.615 3.184c-3.604-.246-11.631-.245-15.23 0-3.897.266-4.356 2.62-4.385 8.816.029 6.185.484 8.549 4.385 8.816 3.6.245 11.626.246 15.23 0 3.897-.266 4.356-2.62 4.385-8.816-.029-6.185-.484-8.549-4.385-8.816zm-10.615 12.816v-8l8 3.993-8 4.007z"
+                        ></path></svg
+                    ></a>
+                    <a
+                      ><svg
+                        xmlns="http://www.w3.org/2000/svg"
+                        width="24"
+                        height="24"
+                        viewBox="0 0 24 24"
+                        class="fill-current"
+                      >
+                        <path
+                          d="M9 8h-3v4h3v12h5v-12h3.642l.358-4h-4v-1.667c0-.955.192-1.333 1.115-1.333h2.885v-5h-3.808c-3.596 0-5.192 1.583-5.192 4.615v3.385z"
+                        ></path></svg
+                    ></a>
                   </div>
                 </div>
-                <div class="card card-compact bg-base-100 shadow-xl">
-                  <div class="avatar">
+                <div
+                  class="card card-compact bg-base-100 shadow-xl text-center"
+                >
+                  <div class="avatar justify-center">
                     <div class="w-24 rounded-full">
-                      <img src="./images/member1.png" />
+                      <img src="./images/member4.png" />
                     </div>
                   </div>
                   <div class="card-body">
-                    <h2 class="card-title">Shoes!</h2>
-                    <p>If a dog chews shoes whose shoes does he choose?</p>
+                    <h2 class="card-title text-center">Chaity Ahmed</h2>
+                    <p>Fruits Expert</p>
                   </div>
-                </div>
-                <div class="card card-compact bg-base-100 shadow-xl">
-                  <div class="avatar">
-                    <div class="w-24 rounded-full">
-                      <img src="./images/member1.png" />
-                    </div>
-                  </div>
-                  <div class="card-body">
-                    <h2 class="card-title">Shoes!</h2>
-                    <p>If a dog chews shoes whose shoes does he choose?</p>
+                  <div class="flex gap-4 pb-2 justify-center text-red-600">
+                    <a
+                      ><svg
+                        xmlns="http://www.w3.org/2000/svg"
+                        width="24"
+                        height="24"
+                        viewBox="0 0 24 24"
+                        class="fill-current"
+                      >
+                        <path
+                          d="M24 4.557c-.883.392-1.832.656-2.828.775 1.017-.609 1.798-1.574 2.165-2.724-.951.564-2.005.974-3.127 1.195-.897-.957-2.178-1.555-3.594-1.555-3.179 0-5.515 2.966-4.797 6.045-4.091-.205-7.719-2.165-10.148-5.144-1.29 2.213-.669 5.108 1.523 6.574-.806-.026-1.566-.247-2.229-.616-.054 2.281 1.581 4.415 3.949 4.89-.693.188-1.452.232-2.224.084.626 1.956 2.444 3.379 4.6 3.419-2.07 1.623-4.678 2.348-7.29 2.04 2.179 1.397 4.768 2.212 7.548 2.212 9.142 0 14.307-7.721 13.995-14.646.962-.695 1.797-1.562 2.457-2.549z"
+                        ></path></svg
+                    ></a>
+                    <a
+                      ><svg
+                        xmlns="http://www.w3.org/2000/svg"
+                        width="24"
+                        height="24"
+                        viewBox="0 0 24 24"
+                        class="fill-current"
+                      >
+                        <path
+                          d="M19.615 3.184c-3.604-.246-11.631-.245-15.23 0-3.897.266-4.356 2.62-4.385 8.816.029 6.185.484 8.549 4.385 8.816 3.6.245 11.626.246 15.23 0 3.897-.266 4.356-2.62 4.385-8.816-.029-6.185-.484-8.549-4.385-8.816zm-10.615 12.816v-8l8 3.993-8 4.007z"
+                        ></path></svg
+                    ></a>
+                    <a
+                      ><svg
+                        xmlns="http://www.w3.org/2000/svg"
+                        width="24"
+                        height="24"
+                        viewBox="0 0 24 24"
+                        class="fill-current"
+                      >
+                        <path
+                          d="M9 8h-3v4h3v12h5v-12h3.642l.358-4h-4v-1.667c0-.955.192-1.333 1.115-1.333h2.885v-5h-3.808c-3.596 0-5.192 1.583-5.192 4.615v3.385z"
+                        ></path></svg
+                    ></a>
                   </div>
                 </div>
               </div>
@@ -560,9 +717,9 @@
       </section>
       <!-- why choose us -->
       <section>
-        <div class="mx-5 md:max-w-3xl md:mx-auto">
+        <div class="mx-5 md:max-w-4xl lg:max-w-5xl md:mx-auto mb-16">
           <div class="max-w-xl p-4 text-center mx-auto">
-            <h1 class="mb-5 text-5xl font-bold">Hello there</h1>
+            <h2 class="mb-5 text-5xl font-bold">Why Choose Us</h2>
             <p class="mb-5">
               Contrary to popular belief, is not simply random text. It has
               roots in a piece of classical Latin literature from 45 BC, making
@@ -588,9 +745,9 @@
               <div
                 class="flex flex-col md:flex-row items-center gap-2 text-center md:text-left"
               >
-                <img class="max-w-full" src="./images/Group 46.png" alt="" />
+                <img class="max-w-full" src="./images/Group 47.png" alt="" />
                 <div>
-                  <h3>Dedicated Team</h3>
+                  <h3>Fresh is Best</h3>
                   <span class="inline-block border w-20"></span>
                   <p>
                     Professional employees are there for you to pick the most
@@ -601,9 +758,9 @@
               <div
                 class="flex flex-col md:flex-row items-center gap-2 text-center md:text-left"
               >
-                <img class="max-w-full" src="./images/Group 46.png" alt="" />
+                <img class="max-w-full" src="./images/Group 48.png" alt="" />
                 <div>
-                  <h3>Dedicated Team</h3>
+                  <h3>Gift Certificates</h3>
                   <span class="inline-block border w-20"></span>
                   <p>
                     Professional employees are there for you to pick the most
@@ -623,9 +780,9 @@
               <div
                 class="flex flex-col md:flex-row-reverse items-center gap-2 text-center md:text-right"
               >
-                <img class="max-w-full" src="./images/Group 46.png" alt="" />
+                <img class="max-w-full" src="./images/Group 49.png" alt="" />
                 <div>
-                  <h3>Dedicated Team</h3>
+                  <h3>Integrated Supplier</h3>
                   <span class="inline-block border w-20"></span>
                   <p>
                     Professional employees are there for you to pick the most
@@ -636,9 +793,9 @@
               <div
                 class="flex flex-col md:flex-row-reverse items-center gap-2 text-center md:text-right"
               >
-                <img class="max-w-full" src="./images/Group 46.png" alt="" />
+                <img class="max-w-full" src="./images/Group 50.png" alt="" />
                 <div>
-                  <h3>Dedicated Team</h3>
+                  <h3>Sustainable Practice</h3>
                   <span class="inline-block border w-20"></span>
                   <p>
                     Professional employees are there for you to pick the most
@@ -649,9 +806,9 @@
               <div
                 class="flex flex-col md:flex-row-reverse items-center gap-2 text-center md:text-right"
               >
-                <img class="max-w-full" src="./images/Group 46.png" alt="" />
+                <img class="max-w-full" src="./images/Group 51.png" alt="" />
                 <div>
-                  <h3>Dedicated Team</h3>
+                  <h3>The Benefits Only</h3>
                   <span class="inline-block border w-20"></span>
                   <p>
                     Professional employees are there for you to pick the most
@@ -673,6 +830,8 @@
         <a class="link link-hover">About us</a>
         <a class="link link-hover">Contact</a>
         <a class="link link-hover">Jobs</a>
+        <a class="link link-hover">Press kit</a>
+        <a class="link link-hover">Press kit</a>
         <a class="link link-hover">Press kit</a>
       </div>
       <div>
